themes/Ddraig/styles.css
/* ... */
.button .icon.del-button { background-position: 0 -204px }
.button:hover .icon.del-button { background-position: 0 -219px }
.button .icon.move-button { background-position: 0 -526px }
.button:hover .icon.move-button { background-position: 0 -541px }

.tcp-warn {position:relative}
#tcp-warn {
	position:absolute;
	top: 3px;
	right: 2px;
	cursor: pointer;
	width:14px;
	height:12px;
	background: url(images/buttons_icons.png) no-repeat 0 -204px;
}
#tcp-warn:hover {background-position:0 -219px}

#site-links, #site-links li {margin: 0;}

.user-avatar,
.user-avatar a,
.user-avatar img,
.user-avatar:after {
	position: relative;
	border-radius: 3px;
	display: inline-block;
}
.user-avatar:after {
	position: absolute;
	border: 1px solid #bbb;
	border-color: rgba(0, 0, 0, 0.2);
	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2) inset;
	content: "";
	bottom: 0;
	left: 0;
	right: 0;
	top: 0;
	z-index: 1;
}
.tag {
	background-image: url(images/btn.png);
	background-repeat: repeat-x;
	background-color: #555; 
	border-radius: 3px;
	color: #fff;
	display: inline-block;
	font-size: 9px;
	font-weight: bold;
	height: 16px;
	line-height: 16px;
	vertical-align: middle;
	padding: 0 5px;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
	text-transform: uppercase;
}
.tag.big {
	font-size: 12px;
}
.tag.green {background-color: #7BA60D;}
.tag.orange {background-color: #ed7710;}
.tag.red {background-color: #d93232;}
.tag.blue {background-color: #178eea;}
.tag.gray {background-color: #9a9a9a;}

h1.maincap .tag,
h2.panelcap .tag {
	margin-top: 3px;
}
.ht-link { position: relative; }
.ht-reply {
	position: absolute;
	right: 0;
}

/* Forum page styles */
.forum-titlebar h1,
.thread-titlebar h1 {
	font-size: 16px;
	font-weight: 600;
	margin: 0;
}
.forum-titlebar h1 a,
.thread-titlebar h1 a {
	font-size: 12px;
	font-weight: normal;
}
.forum-titlebar p,
.thread-titlebar p {
	margin: 0;
}
.forum-titlebar,
.thread-titlebar {
	padding: 10px;
	margin-bottom: 6px;
	position: relative;
}
.forum-titlebar .thread-counts,
.thread-titlebar .thread-counts {
	clear: right;
}
.stats-caption {
	width: 100px;
}

.last-post-caption,
.thread-last-post {
	white-space: nowrap;
	padding-right: 50px; /* width of the avatar + margins etc.*/
}
.thread-title,
.last-post-author {
	font-size: 13px;
}
.thread-starter,
.last-post-date {
	color: #888;
}
.thread-starter a,
.last-post-date a {
	color: #666;
}
.thread-starter a:hover,
.last-post-date a:hover {
	border-bottom: 1px dotted #666;
}
.thread-stats .major,
.thread-stats .minor {
	display: table;
	width: 100%;
}
.thread-stats .major {,
	min-width: 98px;
	font-size: 13px;
}
.thread-stats dt,
.thread-stats dd {
	display: table-cell;
}
.thread-stats dd {
	text-align: right;
	padding-left: 4px;
}
.thread-stats dt { color: #666 }
.thread-stats .major dd { font-size: 14px; }
.thread-last-post .avatar {
	width: 40px;
	max-height: 40px;
}
.last-post-avatar {
	float: left;
	margin-right: 6px;
}
.deleted-user {
	font-style: italic;
}
.faint {
	color: #888
}
.faint strong,
.darker {
	color: #222;
}
.thread-titlebar .user-avatar {
	margin-right: 5px;
}
.thread-titlebar .user-avatar img {
	width: 58px;
}
.thread-options {
	height: 18px;
}
.who-posted {
	white-space: normal;
	font-weight: normal;
}
ul.posters {
	margin: 0 0 0 4px;
	display: inline;
}
li.poster {
	margin-right: 4px;
	display: inline;
}
.forum-category {
	vertical-align: middle;
}
.online-status {
	height: 10px;
	border-radius: 6px
}

/* profile.php */
.profile_user_name:after,
.profile_user_level:after,
.profile_user_email:after,
.profile_user_joined:after {
	background: url(images/news-info.png) no-repeat left top;
	width: 16px;
	height: 16px;
	margin-left: 2px;
	display: inline-block;
	vertical-align: middle;
	content: " ";
}
.profile_user_level:after {
	background-position: left -40px; 
}
.profile_user_email:after {
	background: url(images/email.png) no-repeat left top; 
}
.profile_user_joined:after {
	background-position: left -20px; 
}
.profile_user_visit .tag {
	vertical-align: top;
}

.profile-page .profile,
.profile-page .profile_category {
	max-width: 600px;
	min-width: 400px;
}
.profile.tbl-border .tbl1 > div[style="float:left"] {
	width: 40%;
	margin-bottom: 3px;
}
.profile.tbl-border .tbl1 > div[style="float:right"] {
	width: 60%;
	margin-bottom: 3px;
}
.profile.tbl-border .tbl1 > div[style="float:none;clear:both"] {
	border-bottom: 1px dotted #ccc;
}
.profile_user_avatar.responsive {
	display: none;
}
/* end profile.php */
.sticky-icon {
	vertical-align: middle;
	float: right;
}
.thread-stats-responsive {
	display: none;
}

.forum-secondary-title {
	font-weight: normal;
}

ul.findex {
	margin: 0;
}
	ul.findex li {
		float: left;
		display: block;
		margin-right: 4px;
	}
	ul.findex li a {
		padding: 0 10px;
	}
	.findex .responsive-menu {
		position: relative;
		right: 0;
		margin: 0 !important;
		width: 100%;
	}
	.findex .responsive-menu ul {
		overflow: hidden;
		right: 0;
		position: relative;
		z-index: 1;
		display: none;
		min-width: 200px;
		margin: 0;
	}
	.findex .responsive-menu li {
		overflow: hidden;
		margin: 0;
		width: 100%;
	}
	.findex .responsive-menu li:first-child {
		margin-top: 4px;
	}
	.findex .responsive-menu li a {
		display: block;
		text-align: left;
	}
	.findex .responsive-menu.active {
		overflow: visible;
	}
	.findex .responsive-menu-button {
		display: block;
		position: absolute;
		right: 0;
		width: 18px;
		height: 16px;
		padding: 4px !important;
		top: -22px;
		border: 1px solid #666;
		border-radius: 4px;
	}

	.findex .responsive-menu.active .responsive-menu-button {
		box-shadow: 0 1px 2px rgba(0,0,0, .5) inset;
	}


	/* Responsive menu three lines icon */
	.findex .responsive-menu-button span,
	.findex .responsive-menu-button span:before,
	.findex .responsive-menu-button span:after {
		content: " ";
		position: relative;
		display: block;
		height: 4px;
		border-radius: 4px;
		background-color: #444;
		margin: 0 auto;
	}
	.findex .responsive-menu-button span:before {
		top: 6px;
	}
/* ... */

